gcc/testsuite/gm2/pim/pass/nulcharvar.mod
MODULE nulcharvar ;

VAR
   ch: CHAR ;
BEGIN
   ch := ''
END nulcharvar.
