gcc/testsuite/gm2/pim/fail/cyclictypes2.mod
MODULE cyclictypes2 ;

TYPE
   A = B;
   B = A;

VAR
   bar: A ;
END cyclictypes2.
